--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/globalStyles.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles/globalStyles.css">
+    <link rel="stylesheet" href="../../styles/header.css">
+    <link rel="stylesheet" href="../../styles/fonts.css">
+    <link rel="stylesheet" href="../../styles/color.css">
+    <link rel="stylesheet" href="../../styles/buttons.css">
+    <link rel="stylesheet" href="../../styles/card.css">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/aside.css">    
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <title>Webwomen</title>
     <meta
       name="description"
@@ -16,8 +23,55 @@
     />
 </head>
 <body>
-    <main></main>
-    <script src="jobsData.js"></script>
-    <script src="index.js"></script>
+    <header>
+      <div class="container header-content-wrapper">
+        <div class="logo">
+          <img src="../../assets/img/logo.svg" alt="logo">
+        </div>
+        <div class="header-body">
+          <h1 class="title-1 color-grey-3">
+            Lugar de mulher é onde ela quiser!
+          </h1>       
+          <p class="color-grey-5 title-6">
+            Está procurando oportunidades de estágio, emprego ou bolsas de estudo?
+          </p> 
+          <p class="color-grey-5 title-6">
+            Ou até mesmo oportunidades para atender eventos de tecnologia no Brasil e ao redor do mundo?
+          </p>
+          <span class="color-grey-5 title-5"> 
+            Confira aqui embaixo o que temos pra você!
+          </span>
+        </div>
+        <a href="#cards-wrapper">
+          <button id="btn-header" class="btn-header bg-color-brand-1 color-grey-6 text-btn">
+            Ir para seção das vagas
+          </button>   
+        </a>
+      </div>
+    </header>
+    <div class="container page-wrapper">      
+      <main class="section-main">
+        <div>
+          <h2 class="title-4 color-grey-1">
+            Vagas
+          </h2>
+        </div>
+        <ul id="cards-wrapper" class="cards-wrapper">
+        </ul>      
+      </main>
+      <aside class="section-selected">
+        <div class="bg-color-grey-6 section-selected-header">
+          <h2 class="title-4 color-grey-1">
+            Vagas Selecionadas
+          </h2>    
+        </div>
+        <div class="selected-content">          
+        </div>
+      </aside>
+    </div>
+    <script src="../../scripts/jobsData.js"></script>
+    <script src="./index.js"></script>
+    <script src="../../scripts/cardsJobs.js"></script>    
+    <script src="../../scripts/selectedCards.js"></script>    
 </body>
 </html>
